perf: modify api of user update to comply with restful specifications
